# python_sample

./: LICENSE  Makefile  pyproject.toml  run_docker.sh  run_poetry.sh
scripts/: install_node.sh  run_docker.sh  run_poetry.sh
src/sample/: main.py  type_sample.py  utils.py
tests/: test_sample.py
