[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Tsukasa Arima"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.0,<3.11"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
